codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_active_turn_key_hints_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 Better Codex                                                    ┌────────┬─────────┬────────┬────┐
                                                                 │Settings│Workspace│Sessions│Help│
                                                                 └────────┴─────────┴────────┴────┘
 Conversation
 system: Better Codex app shell                                  Keys
 you: Create a divergent standalone TUI.                         Alt + Left / Right
                                                                 Enter steer
 codex: Started a fullscreen app shell backed by app-server      Ctrl+C interrupt, Esc x2 exit
        turns.                                                   Alt+Up select, Ctrl+O copy
 plan: 1. Build shell                                            Ctrl+D hide dashboard
       2. Wire transcript                                        Sessions: Ctrl+3 select/focus
       3. Render dashboard                                       r resume, f fork, a/u archive
                                                                 v archived, d delete
 ▌ tool exec just test -p codex-tui                              n rename, / search
                                                                 Settings: Ctrl+1 select/focus
 ▌ edited 3 files +128 -24                                       Enter edit/cycle, Tab page
                                                                 Esc return to composer
 codex: The new shell owns the fullscreen surface.
                                                                 Status
                                                                 thinking
                                                                 turn turn-act...

                                                                 Tools
                                                                 in progress exec just test -p c...
                                                                 completed file changes in app_s...













 Composer busy 1:37
 > Summarize the new shell architecture
