codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_activity_dashboard_panels_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                                      │
  Dashboard  ◆ BC   gpt-5-codex ▾   default ▾   default ▾  ◐ thinking │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────────────────────────│
                                                                      │◆ CONVERSATION         │ ◆ COMPOSER
 ◆ CONVERSATION                                                       │ Alt+↑ / ↓   Select ms…│  ⌘← / →      Line ends
 ▎ SYSTEM  Better Codex app shell                                     │ ↵ / c       Copy item │  ⌘⌫          Delete st…
 ▎ YOU  Create a divergent standalone TUI.                            │ e           Branch    │  ⌥/^ + ←→    Move word
                                                                      │ ^O          Copy reply│  S/A + ↵     Newline
 ▎ CODEX  Started a fullscreen app shell backed by app-server turns.  │                       │  Alt+M       Model
 ▎ PLAN  1. Build shell                                               │◆ DASHBOARD            │  Alt+E       Effort
         2. Wire transcript                                           │ ^1 … ^4     Open tab  │  ↵           Steer turn
         3. Render dashboard                                          │ Alt+← / →   Prev/next │  Tab         Queue next
                                                                      │ Pg↑ / Pg↓   Scroll he…│
 ▌ tool exec just test -p codex-tui                                   │                       │ ◆ APP
                                                                      │◆ SESSIONS             │  ^P          Commands
 ▌ edited 3 files +128 -24                                            │ ↑↓ / jk     Select    │  ^D          Show/hide
 ▎ PLAN  1. Route activity into dashboard panels                      │ ↵ / r       Resume    │  ^C          Stop/canc…
                                                                      │ f           Fork      │  Esc ×2      Exit app
 ▎ CODEX  The new shell owns the fullscreen surface.                  │ a           Archive   │  ^N          New chat
                                                                      │ u           Unarchive │
                                                                      │ v           Switch vi…│ ◆ AGENTS
                                                                      │ n           Rename    │  ↵           Focus/log
                                                                      │ /           Search    │  ↑↓ / jk     Select
                                                                      │ d           Delete    │  g / G       First/last
                                                                      │                       │  r           Reload log
                                                                      │
                                                                      │▎◆ APPROVALS
                                                                      │▎approval Run command: cargo test -p codex-tui
                                                                      │▎input Tool input: tool-input-1
                                                                      │
                                                                      │▎◆ BACKGROUND
                                                                      │▎workspace refresh queued
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
╭────────────────────────────────────────────────────────────────────╮│
│◆ APPROVAL                                                          ││
│? Run command: cargo test -p codex-tui                              ││
│  Reason: Needs network access                                      ││
│  Working directory: /workspace/better-codex                        ││
│> 1 Run once                                                        ││
│  2 Deny and interrupt                                              ││
│   e Edit   ? Explain                                               ││
╰────────────────────────────────────────────────────────────────────╯│
