codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_agents_dashboard_snapshot.snap
---
source: tui/src/app_shell_tests.rs
assertion_line: 2919
expression: "render_shell(&shell, Rect::new(0, 0, 112, 30))"
---
                                                              │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────────────────│─────────────━━━━━━━━━━━────────────────────────
                                                              │
 ◆ CONVERSATION                                               │▎◆ AGENTS
 ▎ SYSTEM  Better Codex app shell                             │▎Agents 4  ● 1 active  ✓ 1 done  ! 1 interrupted
 ▎ YOU  Create a divergent standalone TUI.                    │▎  × 1 failed
                                                              │▎  ● running  Hypatia
 ▎ CODEX  Started a fullscreen app shell backed by app-server │▎    └ ✓ completed  Picasso
          turns.                                              │▎  ! interrupted  Turing
 ▎ PLAN  1. Build shell                                       │▎›   └ × errored  Socrates
         2. Wire transcript                                   │▎Inspector  Socrates  × errored
         3. Render dashboard                                  │▎Model  gpt-5-codex
                                                              │▎Reasoning  high
 ▌ tool exec just test -p codex-tui                           │▎Path  /root/testing/failure
                                                              │▎Task  Review the new TUI flow and visual
 ▌ edited 3 files +128 -24                                    │▎      hierarchy.
                                                              │▎Latest  Compact flow failed
 ▎ CODEX  The new shell owns the fullscreen surface.          │▎Recent
                                                              │▎  • agent spawned
                                                              │▎  • agent started
                                                              │▎Enter full log · j/k select · Esc release
                                                              │
                                                              │
╭────────────────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                             ││
│> Summarize the new shell architecture                      ││
│                                                            ││
│                                                            ││
╰────────────────────────────────────────────────────────────╯│
