codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_auto_resolving_user_input_snapshot.snap
---
source: tui/src/app_shell_tests.rs
assertion_line: 8801
expression: "render_shell(&shell, Rect::new(0, 0, 100, 28,))"
---
                                                  │
  Dashboard  ◆ BC      gpt-5-codex ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ PLAN  1. Build shell                         │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
         2. Wire transcript                     │ │▎+ New session  Ctrl+N
         3. Render dashboard                    │ │▎loading sessions
                                                ┃ │
 ▌ tool exec just test -p codex-tui             ┃ │▎◆ THREAD
                                                ┃ │▎stage-one
 ▌ edited 3 files +128 -24                      ┃ │▎id 01900000-0000-7000-8000-000000000001
                                                ┃ │▎resume, fork, archive, delete in session list
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ TOOL INPUT                                    ││
│? Tool input: tool-input-1 (1/1)                ││
│  Environment: Which environment should the tool││
│  use?                                          ││
│  1 Production - Use the live service           ││
│  2 Staging - Use the staging service           ││
│  Other (free-form) - Type a custom answer      ││
│  below.                                        ││
│  Auto-continue after 120s if unanswered        ││
│> ▏answer                                       ││
╰────────────────────────────────────────────────╯│
