codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_compact_dashboard_overlay_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 ◆ BC    gpt-5-codex ▾   default ▾   default ▾
────────────────────────────────────────────────
│
│  Status   │  Agents   │  Sessions   │  Help
│────────────────────────━━━━━━━━━━━━━─────────
│▎◆ SESSIONS
│▎○ CLICK TO FOCUS  ACTIVE  0 sessions
│▎+ New session  Ctrl+N
│▎loading sessions
│▎◆ THREAD
│▎stage-one
│▎id 01900000-0000-7000-8000-000000000001
│▎resume, fork, archive, delete in session list
│
│
│
│
╭──────────────────────────────────────────────╮
│◆ MESSAGE  1:37                               │
│> Summarize the new shell architecture        │
│                                              │
│                                              │
╰──────────────────────────────────────────────╯
