codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_compact_top_dashboard_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 ◆ BC    gpt-5-codex ▾   default ▾   default ▾
────────────────────────────────────────────────

   Status   │  Agents   │  Sessions   │  Help
 ────────────────────────━━━━━━━━━━━━━─────────
 ▎◆ SESSIONS
 ▎○ CLICK TO FOCUS  ACTIVE  0 sessions
 ▎loading sessions
 ▎◆ THREAD
 ▎stage-one
 ▎id 01900000-0000-7000-8000-000000000001


 ◆ CONVERSATION
 ▎ CODEX  The new shell owns the fullscreen   ┃
          surface.                            ┃

╭──────────────────────────────────────────────╮
│◆ MESSAGE  1:37                               │
│> Summarize the new shell architecture        │
│                                              │
│                                              │
╰──────────────────────────────────────────────╯
