codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_compacted_long_output_block_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---

 ◆ BETTER CODEX  better-codex           gpt-5-codex ▾   default ▾  ● thinking
──────────────────────────────────────────────────────────────────────────────

     Settings    │    Agents    │   Workspace    │   Sessions    │   Help
 ─────────────────────────────────────────────────━━━━━━━━━━━━━━━────────────
 ▎◆ SESSIONS
 ▎○ CLICK TO FOCUS  ACTIVE  0 sessions


 ◆ CONVERSATION
   ▌        cargo build output line 159                                     ┃
   ▌        cargo build output line 160                                     ┃

╭────────────────────────────────────────────────────────────────────────────╮
│◆ MESSAGE  1:37                                                             │
│> Summarize the new shell architecture                                      │
│                                                                            │
│                                                                            │
╰────────────────────────────────────────────────────────────────────────────╯
