codex-rs/tui/src/snapshots/codex_tui__app_shell__tests__renders_decision_audit_snapshot.snap
---
source: tui/src/app_shell_tests.rs
expression: "render_shell(&shell, area)"
---
                                                  │
 ◆ BC      gpt-5-codex ▾   default ▾   default ▾  │   Status   │  Agents   │  Sessions   │  Help
──────────────────────────────────────────────────│─────────────────────────━━━━━━━━━━━━━──────────
                                                  │
 ◆ CONVERSATION                                   │▎◆ SESSIONS
 ▎ PLAN  1. Build shell                         │ │▎○ CLICK TO FOCUS  ACTIVE  0 sessions
         2. Wire transcript                     │ │▎+ New session  Ctrl+N
         3. Render dashboard                    │ │▎loading sessions
                                                ┃ │
 ▌ tool exec just test -p codex-tui             ┃ │▎◆ THREAD
                                                ┃ │▎stage-one
 ▌ edited 3 files +128 -24                      ┃ │▎id 01900000-0000-7000-8000-000000000001
 ▎ AUDIT  approval approved: Command: cargo     ┃ │▎resume, fork, archive, delete in session list
          test -p codex-tui                     ┃ │
 ▎ AUDIT  elicitation declined: MCP github:     ┃ │
          URL request                           ┃ │
 ▎ AUDIT  tool input submitted: Tool input:     ┃ │
          environment                           ┃ │
                                                ┃ │
 ▎ CODEX  The new shell owns the fullscreen     ┃ │
          surface.                              ┃ │
                                                  │
╭────────────────────────────────────────────────╮│
│◆ MESSAGE  1:37                                 ││
│> Summarize the new shell architecture          ││
│                                                ││
│                                                ││
╰────────────────────────────────────────────────╯│
